--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     <link rel="stylesheet" href="/assets/css/reset.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap">
-    <link rel="stylesheet" href="/assets/css/style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap"> 
     <link rel="stylesheet" href="/assets/css/base.css">
     <link rel="stylesheet" href="/assets/css/header.css">
     <link rel="stylesheet" href="/assets/css/menu-lateral.css">
@@ -41,6 +40,99 @@
                 <p class="cartao__info cartao__info--tempo">33 minutos</p>
                 <p class="cartao__info cartao__info--visualizacao">33 visualizações</p>
                 <button class="cartao__botao cartao__botao--play cartao__botao--destaque">Assistir Agora</button>
+            </div>
+        </article>
+        <h2 class="titulo-pagina__segundario">Vídeos mais vistos</h2>
+        <article class="cartao">
+            <img src="assets/img/video_1.png" alt="video banner 1" class="cartao__imagem">
+            <div class="cartao__conteudo">
+                <h3 class="cartao__perfil">André Soares</h3>
+                <p class="cartao__titulo">HZC - Tudo sem Padrin</p>
+                <p class="cartao__info cartao__info--tempo">33 minutos</p>
+                <button class="cartao__botao cartao__botao--play"></button>
+            </div>
+        </article>
+
+        <article class="cartao">
+            <img src="assets/img/video_2.png" alt="video banner 1" class="cartao__imagem">
+            <div class="cartao__conteudo">
+                <h3 class="cartao__perfil">Bruno Lopes</h3>
+                <p class="cartao__titulo">HZC - Enter The Hu-flez</p>
+                <p class="cartao__info cartao__info--tempo">33 minutos</p>
+                <button class="cartao__botao cartao__botao--play"></button>
+            </div>
+        </article>
+
+        <article class="cartao">
+            <img src="assets/img/video_3.png" alt="video banner 1" class="cartao__imagem">
+            <div class="cartao__conteudo">
+                <h3 class="cartao__perfil">Luiza Sampaio</h3>
+                <p class="cartao__titulo">HZC - Vol.3</p>
+                <p class="cartao__info cartao__info--tempo">33 minutos</p>
+                <button class="cartao__botao cartao__botao--play"></button>
+            </div>
+        </article>
+
+        <article class="cartao">
+            <img src="assets/img/video_4.png" alt="video banner 1" class="cartao__imagem">
+            <div class="cartao__conteudo">
+                <h3 class="cartao__perfil">Bruno Lopes</h3>
+                <p class="cartao__titulo">HZC - Love Machine</p>
+                <p class="cartao__info cartao__info--tempo">33 minutos</p>
+                <button class="cartao__botao cartao__botao--play"></button>
+            </div>
+        </article>
+
+        <article class="cartao">
+            <img src="assets/img/banner-mobile_2.png" alt="Banner do cartao" class="cartao__imagem">
+            <div class="cartao__conteudo">
+                <p class="cartao__destaque">Nova arte</p>
+                <h3 class="cartao__titulo">Only Zikas - Lagoa Dompa Club</h3>
+                <p class="cartao__perfil">Bruno Lopes</p>
+                <p class="cartao__info cartao__info--valor">33,33</p>
+                <p class="cartao__info cartao__info--visualizacao">53 visualizações</p>
+                <button class="cartao__botao cartao__botao--play cartao__botao--destaque">Assistir Agora</button>
+            </div>
+        </article>
+
+        <h2 class="titulo-pagina__segundario">Camisas mais recentes</h2>
+        <article class="cartao">
+            <img src="assets/img/produto_1.png" alt="video banner 1" class="cartao__imagem">
+            <div class="cartao__conteudo">
+                <h3 class="cartao__perfil">André Soares</h3>
+                <p class="cartao__titulo cartao__titulo--comprar">IBM</p>
+                <p class="cartao__info cartao__info--valor">33,33</p>
+                <button class="cartao__botao cartao__botao--comprar"></button>
+            </div>
+        </article>
+
+        <article class="cartao">
+            <img src="assets/img/produto_2.png" alt="video banner 1" class="cartao__imagem">
+            <div class="cartao__conteudo">
+                <h3 class="cartao__perfil">Bruno Lopes</h3>
+                <p class="cartao__titulo cartao__titulo--comprar">Huflez Crew Philosophy Club</p>
+                <p class="cartao__info cartao__info--valor">33,33</p>
+                <button class="cartao__botao cartao__botao--comprar"></button>
+            </div>
+        </article>
+
+        <article class="cartao">
+            <img src="assets/img/produto_3.png" alt="video banner 1" class="cartao__imagem">
+            <div class="cartao__conteudo">
+                <h3 class="cartao__perfil">Luiza Sampaio</h3>
+                <p class="cartao__titulo cartao__titulo--comprar">Corujita noturna</p>
+                <p class="cartao__info cartao__info--valor">33,33</p>
+                <button class="cartao__botao cartao__botao--comprar"></button>
+            </div>
+        </article>
+
+        <article class="cartao">
+            <img src="assets/img/produto_4.png" alt="video banner 1" class="cartao__imagem">
+            <div class="cartao__conteudo">
+                <h3 class="cartao__perfil">Bruno Lopes</h3>
+                <p class="cartao__titulo cartao__titulo--comprar">GGG - Gatin G Gorro</p>
+                <p class="cartao__info cartao__info--valor">33,33</p>
+                <button class="cartao__botao cartao__botao--comprar"></button>
             </div>
         </article>
     </main>
